remote db added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.jpa.hibernate.ddl-auto=update
 # -------------------
 # Data-source config.
 spring.sql.init.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee_managment_db
+spring.datasource.url=jdbc:postgresql://database-1.crbzbwkamnln.ap-northeast-1.rds.amazonaws.com:5432/employee
 spring.datasource.username=postgres
-spring.datasource.password=zia123
+spring.datasource.password=zH50567205
 
 
 
